# pyls

./: README.md  pyproject.toml
src/: pyls.py
tests/: test_pyls.py
