[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyls"
version = "0.1.0"
description = "A Python implementation of the ls command for JSON-based directory structures"
authors = [
    { name="Durga Madhaba Rath", email="d.rath88@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
pyls = "pyls:main"

[tool.setuptools.packages.find]
where = ["src"]
